<resources>
    <string name="app_name">"Leggy"</string>
    <string name="menu_home">Home</string>
    <string name="menu_afspraken">Afspraken</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_user">Profiel</string>
    <string name="website">www.chirurgenoperatie.nl/wp/ongeluk-sport/gebroken-onderbeen/</string>
    <string-array name="questions">
        
        <item>Algemene genezingsproces en medische info.</item>
        
        <item>Mijn spieren en/of gewrichten doen zeer.</item>
        
        <item>Ik heb last van jeuk onder mijn gips</item>
        
        <item>Mijn vingers of tenen worden blauw</item>
        
        <item>Wanneer moet je opnieuw de doctor bellen?</item>

        
        <item>Mag het gips nat worden?</item>
        
        <item>Mag ik auto rijden met gips?</item>
        
        <item>Hoe kan ik het makkelijkst douchen met gips?</item>
        
        <item>kan je met loopgips gewoon zonder krukken lopen?</item>
        
        <item>Wat moet u weten over zwemgips</item>

    </string-array>
    <string-array name="answers">
        
        <item>
            Deze webpagina geeft informatie en over de chirurgische behandeling van een gebroken onderbeen. Hier vind je onder andere informatie over de anatomie van het been en het genezingsproces.
            \nHet is goed u te realiseren dat voor iedereen de situatie anders kan zijn dan beschreven. De klachten, de behandeling en de snelheid van herstel kan enorm verschillen per persoon en de complexheid van een beenbreuk.
            \n\nDe website:
            \nhttp://www.chirurgenoperatie.nl/wp/ongeluk-sport/gebroken-onderbeen/
                </item>
        
        <item>
            Dat is vaak het gevolg van de onbeweeglijke stand in het gips. Pezen, spieren en gewrichten zijn gemaakt om te bewegen.
            \n\nGips werkt dan belemmerend met klachten als gevolg. De vastzittende lichaamsdelen kunt u natuurlijk niet bewegen, maar de overige gewrichten kunt en moet u blijven bewegen om stijfheid te voorkomen.
            \n\nDaarnaast is er zeker de eerste paar dagen tot een week gewoon last van ‘breukpijn’ waartegen u pijnstillers (paracetamol) kunt nemen.
                </item>
        
        <item>
            Dit is heel persoonlijk en kan afhankelijk zijn van weersomstandigheden, transpiratie en het soort huid en allergie.
            Wordt de jeuk heel hevig (tot een branderig gevoel aan toe) en ziet de huid rondom het gips rood, dan kan er sprake zijn van een allergie. Vaak wordt jeuk veroorzaakt door transpiratie.
            \n\nEen manier om dat soort jeuk te bestrijden is het gebruik van een haarföhn. Door met de föhn in lauwe stand rond het gips te blazen verdwijnt het vocht en daarmee ook de jeuk. Ook is er een soort spray voor te verkrijgen.
            \n\nGa niet met voorwerpen zoals een breinaald in het gips. Daardoor kunnen wonden ontstaan, waardoor de jeuk alleen maar toeneemt of aanleiding geeft tot het ontstaan van een infectie.
                </item>
        
        <item>
            Een verkleuring van de huid kan ontstaan door een bloeduitstorting die afzakt naar lager gelegen punt, meestal de vinger of tenen. Deze verkleuring verdwijnt in de loop van de tijd vanzelf (kan enige tijd duren).
            \n\nVingers of tenen kunnen ook blauw verkleuren door een slechte bloedvoorziening. Wanneer dit het geval is moet u contact opnemen met u arts of het ziekenhuis
                </item>
        
        <item>
            Als je been in het gips zit en je ben thuis om het te genezen, kunnen er soms complicaties optreden.\n\n<b>Waar moet je op letten?</b>\n\n
            • Toenemende pijn/of zwelling.\n
            • Stuwing die niet af wil zakken als het been\n\t hoger gelegd wordt,en stuwing die pijn veroorzaakt.\n
            • Kloppende pijn.\n
            • Koorts of koude rillingen.\n
            • Tenen, voeten of benen voelen koud \n\tof juist heel erg warm aan.\n
            • Tenen (ook nagels), voet of been veranderd van kleur.\n
            • Misselijkheid, hoofdpijn.\n
            • Klachten die je niet begrijpt of vertrouwt \n\tof die iemand in je omgeving niet vertrouwt.
                </item>
        
        <item>
            U moet natuurlijk proberen het gips droog te houden.
            Is het gips een beetje nat, dan laat u het goed drogen. Ook kunt u de föhn gebruiken (op de koude stand) om het gips te drogen.\n\nIs het gips doordrenkt, dan kan de huid verweken waardoor problemen kunnen ontstaan zoals schimmelinfectie of wonden.
            Ook met een kunststofverband kunt u niet douchen of zwemmen.\n\nHoewel kunststof waterbestendig is neemt het verband dat eronder zit wel water op. Dat kan irritatie en huidcomplicaties geven.
            \n\nOok mag u gips niet met plastic afdekken. Als het kunststofverband vuil is kunt u het wel aan de buitenzijde met een vochtige doek of borsteltje reinigen.
                 </item>
        
        <item>
            Veiligheid staat voorop. Autorijden met gips is niet per definitie verboden, maar is ook niet per definitie toegestaan.
            Verzekeraars kunnen weigeren om uit te betalen in geval van schade, maar dat hangt af van de omstandigheden.
            \n\nDe verantwoordelijkheid ligt sowieso bij de patiënt zelf, net als wanneer u in de auto zou stappen met een zware griep of na een slapeloze nacht.
            U moet dus zelf inschatten in hoeverre uw gips de rijvaardigheid beïnvloedt.
            \n\nHet advies van de arts is niet meer dan een advies. En het beste advies is dan ook om het gezonde verstand te gebruiken. Als u om wat voor reden dan ook twijfelt aan uw vermogen om veilig auto te rijden, is het beter om voorlopig niet achter het stuur plaats te nemen.
                </item>
        
        <item>
            Om toch met een gips te kunnen douchen / baden zijn er de volgende mogelijkheden:

            \n\n1.\nBeen / arm “buiten boord” houden zodat het niet nat wordt: nadeel aflopend water kan toch schade veroorzaken en balanceren op 1 been waarbij het andere moet worden hoog gehouden buiten de douche / bad is onhandig en gevaarlijk (uitglijden). Bij kinderen is dit moeilijk uit te voeren zonder dat de ouder helpt.
            \n\n2.\nBescherm het gips in een (dubbele) plastic zak (bv. vuilniszakken) welke allebei afzonderlijk met een elastiek worden afgesloten: nadeel niet altijd volledig waterdicht, zak kan kapot gaan.
            \n\n3.\nEr bestaan hiervoor speciale dikke plastic beschermhoezen met aan de bovenzijde een hermetisch afsluitend rubber waarmee men zelfs onder water in bad kan zitten. De hoezen worden als een sok over het gips aangetrokken. Ze worden echter niet altijd niet vergoed door uw verzekering (10 – 20 euro)
                </item>
        
        <item>
            Ja, met loopgips mag je zonder krukken lopen en fietsen. Het enige waar je rekening mee moet houden is, dat wanneer je gaat zitten je de gipsvoet omhoog moet leggen.Dat is om zwelling te voorkomen.En het lopen gaat met kleine stapjes, omdat je die enkel niet kunt gebruiken.
            \n\nOnderaan het loopgips is in het algemeen een zool bevestigd, die je kunt losmaken wanneer je naar bed gaat.
            Die zool is vaak dikker dan de zool van je schoenen.
            \n\nOm te zorgen dat je daar bij het lopen geen last van hebt, kan je aan het ‘gezonde’ been een schoen dragen met een zool of hak van vergelijkbare dikte of hoogte.
            </item>
        
        <item>
            Bij zwemgips is er geen beschermlaag van watten omdat watten niet goed opdrogen. Houd er rekening mee dat het gips hierdoor wat strakker aan kan voelen.
            Als de huid achter elkaar nat wordt, krijgt de huid niet de kans om te drogen. Mogelijk ontstaan er verweking van de huid. Verweking van de huid kan op den duur voor huidirritaties zorgen.

            \n\nAdviezen voor douchen, baden of zwemmen:
            \n\nHet is beter om niet in natuurwater (meren, rivieren of de zee) te zwemmen. Als parasieten of verontreinigde stoffen vanuit het water onder het gips komen, kunnen huidirritatie of andere problemen optreden.
            Zwem bij voorkeur alleen in een zwembad met chloorwater. Houd er rekening mee dat u met zwemgips minder goed kunt bewegen in het water.
            Probeer eerst in ondiep water hoe het gaat, ga dan pas in diep water. Spoel het gips grondig na met schoon water na het douchen, baden of zwemmen. Laat het gips bij voorkeur niet meer nat worden na 17.00 uur. Hierdoor heeft het gips tijd om te drogen.

            \n\nZorg ervoor dat het gips goed droogt nadat het nat is geweest, dit kan door:
            \n\n• Droog het gips en de randen af met een handdoek.
            \n\n• Armgips: laat uw arm hangen en laat zoveel mogelijk \n\twater uit het uiteinde van het gips lopen.
            \n\n• Beengips: buig uw tenen naar boven en beneden \n\tzodat het water langs de tenen uit het gips kan lopen,\n\tof hef het been op zodat het water er van de bovenkant \n\tuit kan lopen.
            \n\n• Föhn het zwemgips droog op een lauwwarme stand.
            </item>

    </string-array>
    <string-array name="greetings">
        <item>Hallo</item>
        <item>Hoi</item>
        <item>Bonjour</item>
        <item>Guten tag</item>
        <item>Buongiorno</item>
        <item>Buenos días</item>
        <item>Ciao</item>
        <item>Hola</item>
        <item>привет</item>
        <item>Hallå</item>
        <item>Bonjour</item>
        <item>Hi</item>
    </string-array>
    <string name="appointNameHint">Afspraak Naam</string>
    <string name="inputTimeHint">Tijd</string>
    <string name="inputDateHint">Datum (DD/MM/JJJJ)</string>
    <string name="afdelingHint">Afdeling</string>
    <string name="doctorHint">Dokter</string>
    <string name="calenderSendBtnText">Verzend</string>
    <string name="placeholderTime">11:15</string>
    <string name="placeholderDate">11/12/2017</string>
    <string name="placeholderAppointment">Gipsbreuk</string>
    <string name="placeholderWardName">Botbreuken</string>
    <string name="placeholderDoctorName">Sanjib</string>
    <string name="wardID">Afd : </string>
    <string name="doctorID">Dr : </string>
    <string name="appointViewTitle">Afspraak Maken</string>
    <string name="noAppointment">Er is staat geen afspraak ingepland. Druk op de knop om een afspraak toe te voegen.</string>
    <string name="tut_text1">Welkom bij de tutorial, voordat je kan inloggen leggen we eerst wat uit.
            \n\nDit is het Home scherm, hier kun je alles in een oogopslag zien.
            Van fase tot afspraken is alles duidelijk in tegels verdeeld.
            Er is een timer tot de volgende afpraakt en krijg je een vraag uit de FAQ te zien om iets wijzer te worden over het herstel.
            \n\nWil je verder lezen klik dan op \'Volgende\', wil je de tutorial overslaan klik dan op \'Overslaan\'.</string>
    <string name="tut_text2">Dit is het afspraken scherm, hier kan je de afpraken vanuit het ziekenhuis toevoegen.
            \nDe afpsraken worden ook direct in je eigen Google agenda gezet.
            Vandaar ook de vraag of Leggy gebruik mocht maken van je eigen agenda.
            \n\nZo vergeet je dus nooit meer je afspraak.
            \n\nJe kan de naam van de dokter in voeren en de afdeling waar je een afpraak heb, bijvoorbeeld: Dokter Janssen, radiologie kamer 2.32
            Wanneer je in het ziekenhuis ben staat dus ook alle informatie in je telefoon.</string>
    <string name="tut_text3">Wanneer je vragen heb over het genezingsproces of het gips, kan je deze vinden in de FAQ pagina.
            \n Hier vind je een lijst met vragen en andwoorden, door op de vraag te klikken kan je het andwoord bekijken.</string>
</resources>