<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="?attr/actionBarSize">


    <LinearLayout
        android:id="@+id/topHalf"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <FrameLayout
            android:id="@+id/animationContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3">

        </FrameLayout>

        <LinearLayout
            android:id="@+id/fieldsContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/appointNameContainer"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/appointName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:layout_gravity="center"
                        android:inputType="textPersonName"
                        android:hint="@string/appointNameHint" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/timeDateContainer"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3">

                    <EditText
                        android:id="@+id/inputTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:layout_gravity="center"
                        android:inputType="time"
                        android:hint="@string/inputTimeHint" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/inputDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:layout_gravity="center"
                        android:inputType="date"
                        android:hint="@string/inputDateHint" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/wardContainer"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/wardName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:layout_gravity="center"
                        android:inputType="textShortMessage"
                        android:hint="@string/afdelingHint"/>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/doctorContainer"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/doctorLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/doctorName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:layout_gravity="center"
                        android:inputType="textPersonName"
                        android:hint="@string/doctorHint"/>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/sendButton"
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:background="@color/colorAccent"
        android:fontFamily="sans-serif"
        android:text="@string/calenderSendBtnText"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

</LinearLayout>